skills,experience,projects etc

--- a/src/app/experience/experience.component.html
+++ b/src/app/experience/experience.component.html
@@ -1,1 +1,26 @@
-<p>experience works!</p>
+<section class="dark-section">
+  <h2>Experience</h2>
+  <div class="jobs">
+    <div class="job">
+      <h3>Job Title</h3>
+      <h4>Company</h4>
+      <p>
+        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eligendi ex
+        ratione inventore suscipit maiores consequatur rerum vero pariatur
+        numquam repudiandae iure nesciunt voluptatem, omnis doloribus alias vel
+        modi blanditiis? Provident.
+      </p>
+    </div>
+
+    <div class="job">
+      <h3>Job Title</h3>
+      <h4>Company</h4>
+      <p>
+        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eligendi ex
+        ratione inventore suscipit maiores consequatur rerum vero pariatur
+        numquam repudiandae iure nesciunt voluptatem, omnis doloribus alias vel
+        modi blanditiis? Provident.
+      </p>
+    </div>
+  </div>
+</section>
