--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,16 +1,28 @@
 <h1>Hello! I'm Elisei</h1>
-<p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Aperiam facilis ratione quis ullam sit mollitia quae ex, voluptatibus eligendi voluptate repellat nihil officia exercitationem fuga nulla sapiente dolores fugit necessitatibus.</p>
+<p>
+  Lorem ipsum dolor, sit amet consectetur adipisicing elit. Aperiam facilis
+  ratione quis ullam sit mollitia quae ex, voluptatibus eligendi voluptate
+  repellat nihil officia exercitationem fuga nulla sapiente dolores fugit
+  necessitatibus.
+</p>
 <div class="links">
-    <a  class="linkGithub" target="_blank" href="https://github.com/eli10es">
-    <img src="https://cdn-icons-png.flaticon.com/512/25/25231.png" alt="Github">  
-    <div class="hidden-label">
-        Github
-    </div>
-</a>
-<a class="linkLinkedIn" target="_blank" href="https://github.com/eli10es">
-    <img src="https://cdn-icons-png.flaticon.com/512/25/25231.png" alt="Github">  
-    <div class="hidden-label">
-        LinkedIn
-    </div>
-</a>
+  <a
+    class="linkGithub dark-section"
+    target="_blank"
+    href="https://github.com/eli10es"
+  >
+    <img src="https://cdn-icons-png.flaticon.com/512/25/25231.png" alt />
+    <div class="hidden-label">Github</div>
+  </a>
+  <a
+    class="linkLinkedIn dark-section"
+    target="_blank"
+    href="https://www.linkedin.com/in/elisei-morariu"
+  >
+    <img
+      src="https://icons.veryicon.com/png/o/miscellaneous/alibaba-cloud-ui-icon-library/linkedin-124.png"
+      alt
+    />
+    <div class="hidden-label">LinkedIn</div>
+  </a>
 </div>
