--- a/src/app/projects/projects.component.html
+++ b/src/app/projects/projects.component.html
@@ -1,1 +1,32 @@
-<p>projects works!</p>
+<section class="dark-section">
+  <h2>Projects</h2>
+  <div class="project">
+    <div class="description">
+      <h3>Project 1</h3>
+      <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo cum soluta
+        quaerat nobis laborum laudantium, excepturi sequi mollitia ab labore ea
+        modi quod animi hic molestiae. Facilis hic totam mollitia?
+      </p>
+    </div>
+    <img
+      src="https://wallpapers.com/images/hd/solid-color-flare-pink-iy91cqnvqycizl71.jpg"
+      alt="Project 1 screenshot"
+    />
+  </div>
+  <div class="project">
+    <div class="description">
+      <h3>Project 2</h3>
+      <p>
+        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Perferendis ex
+        dolor nam temporibus, dicta eaque ad inventore perspiciatis ducimus
+        veritatis praesentium in ab commodi nostrum eum maiores labore impedit
+        eligendi!
+      </p>
+    </div>
+    <img
+      src="https://wallpapers.com/images/hd/aesthetic-one-color-vdtveg95r22cn8fu.jpg"
+      alt="Project 1 screenshot"
+    />
+  </div>
+</section>
