--- a/src/app/header/header.component.css
+++ b/src/app/header/header.component.css
@@ -1,39 +1,69 @@
-.links{
-    display: flex;
+.links {
+  display: flex;
 }
 
-a{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    text-decoration: none;
-    position: relative;
-    width: 100px;
+a {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  text-decoration: none;
+  position: relative;
+  width: 50%;
+  margin: 0.25rem 1rem;
 }
 
-a::before{
-    opacity: 0;
-    content: "";
-    position: absolute;
-    height: 100px;
-    width: 100px;
-    border-radius: 100%;
-    z-index: -5;
+a::before {
+  opacity: 0;
+  content: "";
+  position: absolute;
+  height: 100px;
+  width: 100px;
+  border-radius: 100%;
+  z-index: -5;
 }
 
-a div.hidden-label{
-    opacity: 0;
-    font-size: 1rem;
-    color: white;
+a div.hidden-label {
+  opacity: 0;
+  font-size: 1rem;
+  color: white;
 }
 
-a:focus,:hover{
+/* a:focus,:hover{
     a div.hidden-label,a::before{
         opacity: 1;
         transition: all 0.2s;
     }
+} */
+
+img {
+  width: 100px;
+}
+.linkGithub {
+  margin-left: 0;
 }
 
-img{
-    width: 100px;
+.linkLinkedIn {
+  margin-right: 0;
+}
+
+.linkLinkedIn:hover,
+:focus {
+  opacity: 1;
+  transition: all 0.2s;
+  div.hidden-label,
+  ::before {
+    opacity: 1;
+    transition: all 0.2s;
+  }
+}
+
+.linkGithub:hover,
+:focus {
+  opacity: 1;
+  transition: all 0.2s;
+  div.hidden-label,
+  ::before {
+    opacity: 1;
+    transition: all 0.2s;
+  }
 }
