--- a/src/app/skills/skills.component.html
+++ b/src/app/skills/skills.component.html
@@ -1,1 +1,19 @@
-<p>skills works!</p>
+<!-- <div class="skill-wrapper">
+  <div
+    class="skill"
+    *ngFor="let skill of skills; index as i"
+    [style.left]="i * (90 / skills.length) + '%'"
+    [style.top]="((i + 1) % 3) * 33 + '%'"
+    [style.transform]="getRandomRotation()"
+  >
+    {{ skill }}
+  </div>
+</div> -->
+<div class="dark-section">
+  <h2>Languages and frameworks</h2>
+  <div>
+    <h3>Angular</h3>
+    <h3>Javascript</h3>
+    <h3>C#</h3>
+  </div>
+</div>
