--- a/src/styles.css
+++ b/src/styles.css
@@ -15,3 +15,34 @@ body{
 h1,h2,h3{
     font-family: "Staatliches", sans-serif;
 }
+
+h1{
+    font-size: 4rem;
+}
+
+h2{
+    font-size: 2rem;
+    margin: 0.5rem;
+}
+
+h3{
+    font-size: 1.5rem;
+    color: #9dc4df;
+    margin: 0.5rem;
+}
+
+h4{
+    font-size: 1rem;
+    margin: 0.5rem;
+}
+
+p{
+    margin: 0.5rem;
+}
+
+.dark-section{
+    background-color: #21343c;
+    padding: 1rem;
+    margin: 1rem 0;
+    border-radius: 10px;
+}
